<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="20dp"
    tools:context=".presentation.activity.user.UpdateUserinfoActivity">

    <TextView
        android:id="@+id/tv_profile_info"
        style="@style/text_30_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:gravity="center"
        android:text="@string/description"
        app:layout_constraintBottom_toTopOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_profile_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/require_a"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_info"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_info" />

    <TextView
        android:id="@+id/tv_profile_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/require_b"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_nickname"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_nickname"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_nickname" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginVertical="30dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/light_gray"
        app:civ_border_overlay="true"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_sign" />


    <TextView
        android:id="@+id/tv_nickname"
        style="@style/text_30_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_nickname"
        app:layout_constraintBottom_toTopOf="@id/edt_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <EditText
        android:id="@+id/edt_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nickname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_nickname"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/text_30_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_password"
        app:layout_constraintBottom_toTopOf="@id/edt_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_nickname" />

    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_10_dark_gray"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintEnd_toEndOf="@id/btn_cancel"
        app:layout_constraintStart_toStartOf="@id/btn_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_10_dark_gray"
        android:text="@string/cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
