<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp"
    tools:context=".presentation.activity.account.SignUpActivity">

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_30_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:gravity="center"
        android:text="@string/tv_title"
        app:layout_constraintBottom_toTopOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        app:civ_border_color="@color/light_gray"
        app:civ_border_overlay="true"
        app:civ_border_width="3dp"
        app:layout_constraintBottom_toTopOf="@id/tv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/txt_profile"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <TextView
        android:id="@+id/tv_nickname"
        style="@style/text_30_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_nickname"
        app:layout_constraintBottom_toTopOf="@id/edt_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile" />

    <EditText
        android:id="@+id/edt_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_nickname"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_nickname"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname" />

    <TextView
        android:id="@+id/tv_password"
        style="@style/text_30_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/tv_password"
        app:layout_constraintBottom_toTopOf="@id/edt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_nickname" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintTop_toBottomOf="@id/tv_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@id/btn_sign_up"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_10_dark_gray"
        android:text="@string/btn_signup"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>