<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_under_personal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv"
            style="@style/text_12_lightgray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:text="@string/tv_reviewer"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_reviewer_content"
            style="@style/text_12_lightgray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/user_reviewer_comment"
            app:layout_constraintBottom_toBottomOf="@+id/tv"
            app:layout_constraintStart_toEndOf="@id/tv"
            app:layout_constraintTop_toTopOf="@id/tv"
            tools:layout_editor_absoluteX="331dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:layout_marginTop="7dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toStartOf="@id/tv_comment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv">

            <ImageView
                android:id="@id/iv_poster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/poster_cinema" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            style="@style/button_20_bold_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:ems="10"
            android:maxLines="1"
            android:text="@string/user_review_title"
            app:layout_constraintBottom_toTopOf="@id/tv_comment"
            app:layout_constraintStart_toEndOf="@id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/tv_comment"
            style="@style/text_12_lightgray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="14"
            android:maxLines="2"
            android:text="@string/user_review_comment"
            app:layout_constraintBottom_toTopOf="@id/ratingBar"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/text_12_lightgray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/user_review_date"
            app:layout_constraintBottom_toBottomOf="@id/tv_reviewer_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_reviewer_content" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="true"
            android:progressTint="@android:color/holo_orange_light"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_comment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>