<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almost_black"
    tools:context=".presentation.activity.WriteActivity">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="140dp"
        android:layout_height="210dp"
        android:layout_marginStart="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_backdrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_backdrop">

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_cinema_title"
        style="@style/text_18_lightgray"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/guideline_backdrop" />

    <TextView
        android:id="@+id/tv_release_date"
        style="@style/text_12_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tv_cinema_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_cinema_title" />

    <RatingBar
        android:id="@+id/ratingBar_cinema"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:progressTint="@color/turbo"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_backdrop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_25_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_write_title"
        app:layout_constraintBottom_toTopOf="@id/et_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar_cinema" />

    <TextView
        android:id="@+id/tv_title_limit"
        style="@style/text_12_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_write_title_limit"
        app:layout_constraintBottom_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toEndOf="@id/tv_title"
        app:layout_constraintTop_toTopOf="@id/tv_title" />

    <EditText
        android:id="@+id/et_title"
        style="@style/text_15_bold_lightgray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:hint="@string/et_write_title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:lines="1"
        android:maxLength="50"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_comment"
        style="@style/text_25_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/tv_write_comment"
        app:layout_constraintBottom_toTopOf="@id/et_comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <TextView
        android:id="@+id/tv_comment_limit"
        style="@style/text_12_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_write_comment_limit"
        app:layout_constraintBottom_toBottomOf="@id/tv_comment"
        app:layout_constraintStart_toEndOf="@id/tv_comment"
        app:layout_constraintTop_toTopOf="@id/tv_comment" />

    <EditText
        android:id="@+id/et_comment"
        style="@style/text_15_bold_lightgray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:hint="@string/et_write_comment"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLength="50"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_comment" />

    <com.willy.ratingbar.BaseRatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btn_write"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_comment"
        app:srb_stepSize="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_write"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_10_dark_gray"
        android:text="@string/btn_write_review"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

</androidx.constraintlayout.widget.ConstraintLayout>